# archie_simulation

./: CMakeLists.txt  README.md  archie_mb_kitchen_dining_world.launch  archie_mb_nav_simulation_neo_workshop_world.launch  archie_mb_simulation.launch  archie_mb_table_docking_world.launch  archie_mw_kitchen_dining_world.launch  archie_mw_simulation.launch  archie_mw_table_docking_world.launch  mpo_500_nav_neo_docking_world.launch  mpo_700_docking_world.launch  mpo_700_nav_neo_docking_world.launch  mpo_700_nav_neo_workshop_world.launch  nav_archie_simulation.launch  nav_simulation.launch  neobotix sim and docking remarks.odt  package.xml  simulation.launch  stefans_world.launch
config/controller/: archie_mb_wheel_controller.yaml  archie_mw_wheel_controller.yaml  mpo_500_wheel_controller copy.yaml
launch/archie_mb/: archie_mb_autonomous_navigation.launch  archie_mb_rviz.launch  archie_mb_simulation_basic copy.launch  archie_mb_simulation_basic.launch
launch/archie_mw/: archie_mw_autonomous_navigation.launch  archie_mw_rviz.launch  archie_mw_simulation_basic copy.launch  archie_mw_simulation_basic.launch
launch/mpo_700/: mpo_700_simulation_basic.launch
launch/prev_archie_mw/: prev_archie_mw_autonomous_navigation.launch  prev_archie_mw_rviz.launch  prev_archie_mw_simulation_basic.launch
launch/prev_mpo_500/: mpo_500_autonomous_navigation.launch  mpo_500_rviz.launch  mpo_500_simulation_basic.launch
worlds/: neo_workshop with tag2 not correct.world  neo_workshop-OK-with-tag2.world  neo_workshop-w-big-table.world  stefans_world.world
(+89 files in other folders)
