<?xml version="1.0"?>
<package>
  <name>archie_simulation</name>
  <version>0.1.0</version>
  <description>The archie_simulation package</description>

  <!-- <url type="website">http://....../archie_mw_base</url> -->

  <author email="stefan@todo.todo">Stefan Chivarov</author>
  <maintainer email="stefan@todo.todo">Stefan Chivarov</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
